--- a/apps/resource-api/package.json
+++ b/apps/resource-api/package.json
@@ -39,6 +39,7 @@
     "axios": "^1.11.0",
     "bcrypt": "^6.0.0",
     "cache-manager": "^7.1.1",
+    "cache-manager-redis-store": "^3.0.1",
     "class-transformer": "^0.5.1",
     "class-validator": "^0.14.2",
     "install": "^0.13.0",
@@ -47,6 +48,7 @@
     "passport": "^0.7.0",
     "passport-jwt": "^4.0.1",
     "passport-local": "^1.0.0",
+    "redis": "^5.8.2",
     "reflect-metadata": "^0.2.2",
     "regex-escape": "^3.4.11",
     "rxjs": "^7.8.1",
@@ -63,6 +65,7 @@
     "@types/node": "^22.10.7",
     "@types/passport-jwt": "^4.0.1",
     "@types/passport-local": "^1.0.38",
+    "@types/redis": "^4.0.11",
     "@types/supertest": "^6.0.2",
     "eslint": "^9.18.0",
     "eslint-config-prettier": "^10.0.1",
