docs: add comprehensive .env.example with all environment variables

--- a/.env.example
+++ b/.env.example
@@ -1,80 +1,114 @@
 # =============================================================================
-# CONFIGURAÇÕES DO FRONTEND
-# =============================================================================
-VITE_API_BASE_URL=http://localhost:3000/api/v1
-
-# =============================================================================
 # CONFIGURAÇÕES DA APLICAÇÃO
 # =============================================================================
 
-# App Configuration
-APP_ENV=develop
+# Ambiente da aplicação (development, production, test)
+APP_ENV=development
+
+# Porta onde a API irá rodar
 APP_PORT=3000
-
-# =============================================================================
-# CONFIGURAÇÕES JWT
-# =============================================================================
-
-# JWT Configuration
-JWT_SECRET=your-super-secret-jwt-key-here-change-in-production
-JWT_REFRESH_SECRET=your-super-secret-refresh-key-here-change-in-production
-JWT_ACCESS_TOKEN_EXPIRES_IN=15m
-JWT_REFRESH_TOKEN_EXPIRES_IN=7d
-
-# =============================================================================
-# CONFIGURAÇÕES STORE (S3/MinIO via LocalStack)
-# =============================================================================
-
-# Store Configuration
-STORE_URI=http://localstack:4566
-STORE_BUCKET_NAME=demarco-challenge
-STORE_PRESIGNED_URI_TTL=24
-STORE_ACCESS_KEY_ID=test
-STORE_SECRET_ACCESS_KEY=test
-STORE_REGION=us-east-1
-
-# =============================================================================
-# CONFIGURAÇÕES ICD
-# =============================================================================
-
-# ICD Configuration
-ICD_API_URI=https://id.who.int/icd/entity
-ICD_API_URI_FALLBACK=https://id.who.int/icd/entity
-ICD_OAUTH_TOKEN_URI=https://icdaccessmanagement.who.int/connect/token
-ICD_OAUTH_CLIENT_ID=your-icd-client-id
-ICD_OAUTH_CLIENT_SECRET=your-icd-client-secret
-ICD_OAUTH_SCOPE=icdapi_access
-ICD_OAUTH_GRANT_TYPE=client_credentials
 
 # =============================================================================
 # CONFIGURAÇÕES DO FRONTEND
 # =============================================================================
 
-# Frontend Configuration
+# URL base da API para o frontend
 VITE_API_BASE_URL=http://localhost:3000/api/v1
 
 # =============================================================================
 # CONFIGURAÇÕES DO BANCO DE DADOS
 # =============================================================================
 
-# MongoDB Configuration
-MONGODB_URI=mongodb://mongodb:27017/resource-api
+# URI de conexão com o MongoDB
+MONGODB_URI=mongodb://localhost:27017/resource-api
 
 # =============================================================================
-# CONFIGURAÇÕES DO REDIS
+# CONFIGURAÇÕES DO CACHE (REDIS)
 # =============================================================================
 
-# Redis Configuration
-REDIS_HOST=redis
-REDIS_PORT=6379
-REDIS_PASSWORD=
-REDIS_DB=0
+# Host do Redis
+CACHE_HOST=localhost
+
+# Porta do Redis
+CACHE_PORT=6379
+
+# Senha do Redis (opcional)
+CACHE_PASSWORD=
+
+# Número do banco de dados Redis (0-15)
+CACHE_DB=0
+
+# TTL padrão do cache em segundos
+CACHE_TTL=3600
 
 # =============================================================================
-# CONFIGURAÇÕES DO LOCALSTACK
+# CONFIGURAÇÕES DE AUTENTICAÇÃO JWT
 # =============================================================================
 
-# LocalStack Configuration
-LOCALSTACK_HOST=localstack
-LOCALSTACK_PORT=4566
+# Chave secreta para assinatura dos tokens JWT
+JWT_SECRET=your-super-secret-jwt-key-here
+
+# Chave secreta para assinatura dos refresh tokens
+JWT_REFRESH_SECRET=your-super-secret-refresh-key-here
+
+# Tempo de expiração do access token (ex: 15m, 1h, 1d)
+JWT_ACCESS_TOKEN_EXPIRES_IN=15m
+
+# Tempo de expiração do refresh token (ex: 7d, 30d)
+JWT_REFRESH_TOKEN_EXPIRES_IN=7d
+
+# =============================================================================
+# CONFIGURAÇÕES DO STORAGE (S3/MINIO)
+# =============================================================================
+
+# URI do serviço de storage (LocalStack/MinIO/S3)
+STORE_URI=http://localhost:4566
+
+# Nome do bucket para armazenamento de arquivos
+STORE_BUCKET_NAME=demarco-challenge
+
+# TTL das URLs pré-assinadas em horas
+STORE_PRESIGNED_URI_TTL=24
+
+# Chave de acesso do storage
+STORE_ACCESS_KEY_ID=test
+
+# Chave secreta do storage
+STORE_SECRET_ACCESS_KEY=test
+
+# Região do storage
+STORE_REGION=us-east-1
+
+# =============================================================================
+# CONFIGURAÇÕES DA API ICD (OMS)
+# =============================================================================
+
+# URL principal da API ICD da OMS
+ICD_API_URI=https://id.who.int/icd/entity
+
+# URL alternativa da API ICD da OMS
+ICD_API_URI_FALLBACK=https://id.who.int/icd/entity
+
+# URL do endpoint OAuth2 da OMS
+ICD_OAUTH_TOKEN_URI=https://icdaccessmanagement.who.int/connect/token
+
+# Client ID para autenticação OAuth2 com a API da OMS
+# Obtenha em: https://icd.who.int/icdapi
+ICD_OAUTH_CLIENT_ID=your-who-client-id
+
+# Client Secret para autenticação OAuth2 com a API da OMS
+# Obtenha em: https://icd.who.int/icdapi
+ICD_OAUTH_CLIENT_SECRET=your-who-client-secret
+
+# Escopo de acesso à API ICD
+ICD_OAUTH_SCOPE=icdapi_access
+
+# Tipo de grant OAuth2
+ICD_OAUTH_GRANT_TYPE=client_credentials
+
+# =============================================================================
+# CONFIGURAÇÕES DO LOCALSTACK (DESENVOLVIMENTO)
+# =============================================================================
+
+# Região do LocalStack
 LOCALSTACK_REGION=us-east-1
